# csaru-game2d1-cpp

./: .gitignore  CMakeLists.txt  Makefile  TODO.md  build-and-run.sh  csaru-game2d1-cpp.vcxproj  csaru-game2d1-cpp.vcxproj.filters  run.sh
src/: SceneAlienTest.cpp  SceneAlienTest.hpp  main.cpp
working-dir/kenney/platformer_redux/: spritesheet_ground.json  spritesheet_players.json
working-dir/levels/: test.json
working-dir/levels/test/: 03_Assets.json  05_GameObjects.json  07_GameObjectComponents.json
